--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -133,6 +133,10 @@
         <file>m2k.html</file>
         <file>menu/ADALM2000Pinout.png</file>
         <file>icons/ic printer.svg</file>
+        <file>uberscope.html</file>
+        <file>menu/us-mark-1.png</file>
+        <file>menu/uberscopes.png</file>
+        <file>menu/ic-uberscopes.png</file>
     </qresource>
     <qresource prefix="/stylesheets">
         <file>stylesheets/global.qss</file>
