--- a/ui/tool_launcher.ui
+++ b/ui/tool_launcher.ui
@@ -54,18 +54,6 @@
        <string notr="true">.QWidget[selected=true] { background-color: rgba(0, 0, 0, 60); }</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
-       <property name="spacing">
-        <number>0</number>
-       </property>
-       <property name="leftMargin">
-        <number>0</number>
-       </property>
-       <property name="topMargin">
-        <number>0</number>
-       </property>
-       <property name="rightMargin">
-        <number>0</number>
-       </property>
        <item>
         <widget class="QWidget" name="menuControl" native="true">
          <property name="autoFillBackground">
@@ -78,10 +66,10 @@ background-color: rgba(0, 0, 0, 60);
 border: 1px solid rgba(0, 0, 0, 30);
 border-radius:5px;
 }
-.QWidget[selected=true] { 
+.QWidget[selected=true] {
 background-color: rgba(0, 0, 0, 60);
 border: 1px solid rgba(0, 0, 0, 30);
-border-radius:5px; 
+border-radius:5px;
 }</string>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_8">
@@ -223,10 +211,10 @@ background-color: rgba(0, 0, 0, 60);
 border: 1px solid rgba(0, 0, 0, 30);
 border-radius:5px;
 }
-QWidget[selected=true] { 
+QWidget[selected=true] {
 background-color: rgba(0, 0, 0, 60);
 border: 1px solid rgba(0, 0, 0, 30);
-border-radius:5px; 
+border-radius:5px;
 }</string>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_7">
@@ -349,8 +337,8 @@ border-radius:5px;
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>633</width>
-            <height>458</height>
+            <width>615</width>
+            <height>351</height>
            </rect>
           </property>
           <property name="sizePolicy">
@@ -757,10 +745,10 @@ background-color: rgba(0, 0, 0, 60);
 border: 1px solid rgba(0, 0, 0, 30);
 border-radius:5px;
 }
-QWidget[selected=true] { 
+QWidget[selected=true] {
 background-color: rgba(0, 0, 0, 60);
 border: 1px solid rgba(0, 0, 0, 30);
-border-radius:5px; 
+border-radius:5px;
 }</string>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_9">
@@ -896,10 +884,10 @@ background-color: rgba(0, 0, 0, 60);
 border: 1px solid rgba(0, 0, 0, 30);
 border-radius:5px;
 }
-QWidget[selected=true] { 
+QWidget[selected=true] {
 background-color: rgba(0, 0, 0, 60);
 border: 1px solid rgba(0, 0, 0, 30);
-border-radius:5px; 
+border-radius:5px;
 }</string>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_11">
@@ -1017,7 +1005,7 @@ border-radius:5px;
             </size>
            </property>
            <property name="styleSheet">
-            <string notr="true">.QWidget:hover { background-color: rgba(0, 0, 0, 60);} 
+            <string notr="true">.QWidget:hover { background-color: rgba(0, 0, 0, 60);}
 QWidget {
 background-image: url(:/menu/adi.png);
 background-repeat: no-repeat;
@@ -1028,6 +1016,62 @@ background-position: left center;
          </item>
          <item>
           <spacer name="horizontalSpacer_4">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeType">
+            <enum>QSizePolicy::Fixed</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>32</width>
+             <height>0</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="uberscopesLogo">
+         <property name="spacing">
+          <number>0</number>
+         </property>
+         <item>
+          <widget class="QWidget" name="uslogo" native="true">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>32</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>104</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">.QWidget:hover { background-color: rgba(0, 0, 0, 60);}
+QWidget {
+background-image: url(:/menu/uberscopes.png);
+background-repeat: no-repeat;
+background-position: left center;
+}</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_17">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
@@ -1105,7 +1149,7 @@ background-position: left center;
                </property>
                <property name="sizeHint" stdset="0">
                 <size>
-                 <width>0</width>
+                 <width>13</width>
                  <height>20</height>
                 </size>
                </property>
@@ -1144,13 +1188,61 @@ min-height: 30px;</string>
               </widget>
              </item>
              <item>
+              <spacer name="horizontalSpacer_5">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeType">
+                <enum>QSizePolicy::Maximum</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>20</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item>
+              <widget class="QWidget" name="uslogo_2" native="true">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="minimumSize">
+                <size>
+                 <width>104</width>
+                 <height>30</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>104</width>
+                 <height>30</height>
+                </size>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">background-image: url(:/menu/uberscopes.png);
+background-repeat: no-repeat;
+background-position: left center;
+min-width: 104px;
+min-height: 30px;</string>
+               </property>
+              </widget>
+             </item>
+             <item>
               <spacer name="horizontalSpacer_7">
                <property name="orientation">
                 <enum>Qt::Horizontal</enum>
                </property>
                <property name="sizeHint" stdset="0">
                 <size>
-                 <width>0</width>
+                 <width>13</width>
                  <height>20</height>
                 </size>
                </property>
@@ -1243,7 +1335,7 @@ qproperty-text: &quot;Failed&quot;;
              <property name="sizeHint" stdset="0">
               <size>
                <width>20</width>
-               <height>10</height>
+               <height>13</height>
               </size>
              </property>
             </spacer>
